# vma

./: .coveragerc  .dockerignore  .gitignore  .semgrepignore  AGENTS.md  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile.web  LICENSE.txt  README.md  README.rst  create_project_zip.py  pyproject.toml  wsgi.py
.github/: config.yml  dependabot.yml
.github/workflows/: build_and_publish.yml  vma-ci.yml
docker/: Dockerfile.vma  Dockerfile.web  docker-compose.yml
docker/db/: db_init.sh  db_reset.sh  init.sql
docker/rev_proxy/: Dockerfile  cert.cron  cert.sh  nginx.conf
docker/rev_proxy/static/js/: main.js
docs/: api-reference.md  architecture.md  cli-reference.md  conf.py  index.md  index.rst  requirements.txt  user-guide.md
src/vma/: app.py  auth.py  connector.py  data_schema.py  helper.py  nvd.py  osv.py  parser.py  routes.py
src/vma/api/: api.py
src/vma/api/models/: v1.py
src/vma/api/routers/: v1.py
src/vma/static/css/: styles.css
src/vma/static/js/: main.js
src/vma/templates/: index.html
src/vma/web/: __init__.py  web.py
src/vma/web/static/css/: auth.css  compare.css  styles.css
src/vma/web/static/js/: code.js  cve.js  dashboard.js  image.js  login.js  main.js  product.js  sidebar.js  teams.js  tokens.js  users.js
src/vma/web/templates/: index.html  login.html
tests/: .env.test  README.md  conftest.py  test_api_tokens.py  test_api_v1.py  test_auth_comprehensive.py  test_e2e_workflows.py  test_osv_acceptance.py  test_osv_parser.py  test_teams_products_images.py  test_users_management.py  test_vulnerabilities.py
