[project]
name = "vma"
version = "0.1"
description = "Vulnerability Management Application"
authors = [
    {name = "ddeuterio",email = "daniel.garcia.anes@gmail.com"}
]
license = "LICENSE.txt"
readme = "README.rst"
requires-python = ">=3.9,<4.0"
dependencies = [
    "argparse (>=1.4.0,<2.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "requests (>=2.32.4,<3.0.0)",
    "ratelimit (>=2.2.1,<3.0.0)",
    "fastapi[standard] (>=0.120.0,<0.121.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[project.scripts]
vma = "vma.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"